--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           CMS.js
         </a>
         <small class="tagline">
-          The Javascript Site Generator
+          Emmanuel Kusi Website
         </small>
         </h3>
         <!-- Navigation -->
