--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <header class="masthead">
         <h3 class="masthead-title">
         <a href="#" class="sitename" title="Home">
-          CMS.js
+          EKA.gh
         </a>
         <small class="tagline">
           Emmanuel Kusi Website
