--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <nav class="nav">
           <ul>
             <li><a href="#/posts">My Posts</a></li>
-            <li><a href="//github.com/emmanuel/cms.js" target="_blank">Github</a></li>
+            <li><a href="//github.com/chrisdiana/cms.js" target="_blank">Github</a></li>
             <li><a href="#/pages/about">About My Website</a></li>
             <li><a href="#/pages/links">My Links</a></li>
           </ul>
