--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <ul>
             <li><a href="#/posts">My Posts</a></li>
             <li><a href="//github.com/EMMANUELKUS/My-Website" target="_blank">Github</a></li>
-            <li><a href="#/pages/about">About My Website</a></li>
+            <li><a href="#/pages/about">Main Content</a></li>
             <li><a href="#/pages/links">My Links</a></li>
           </ul>
         </nav>
