--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <nav class="nav">
           <ul>
             <li><a href="#/posts">My Posts</a></li>
-            <li><a href="//john.com/EMMANUELKUS/My-Website" target="_blank">Github</a></li>
+            <li><a href="//emmanuel.com/EMMANUELKUS/My-Website" target="_blank">Github</a></li>
             <li><a href="#/pages/about">Main Content</a></li>
             <li><a href="#/pages/links">My Links</a></li>
           </ul>
