Updated my website name
Changed my website name from EKA gh to www.emmanuelkusi.com

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <header class="masthead">
         <h3 class="masthead-title">
         <a href="#" class="sitename" title="Home">
-          EKA.gh
+          www.emmanuelkusi.com
         </a>
         <small class="tagline">
           Emmanuel Kusi Website
